    started ... and save them.
October 5, 2005
  - Retry select in pipe data source in case of EINTR.
  - Add attach -list to support determination of event source.
October 7, 2005
  - Fix defects in eventsink pipeline add/delete code.  Predicates
    not constructed correctly.
October 17, 2005
  - Add the new browser based GUI to the system.
October 18, 2005
  - Add fix for defect 188 - grobj files need to specify spectra by name.
October 21, 2005
  - Fix error in old tree gui handling of old list mode save files:
    treeparameter -set was invoked with the wrong number of parameters.
October 24, 2005
  - Fix error in old tree gui:  Saving list mode files treeparameterList
    was missing a $ when being appended to the list of lists...so no modified
    treeparameters were saved.
October 31, 2005
  - Fix buffer overflow problem in griprint.cc found by D. Caussyn.
November 29, 2005
  - Put spectrum names in integrations (and hence in logfiles), rather
    than slot numbers
  - Defect 174 - Make +/- buttons kick out of autoscale.
  - Defect 162 - Document user's obligation to delete buffer
    translators.
Decemberr 19, 2005
  - Remove illegal default parameter from PointlistGate.h's InGate with
    parameters.


3.1-pre4
February 1, 2006
  - Factor adding a configuration parameter to a CModule in Scriptable SpecTcl
    into AddParameter member function so extenders can add new parameter types.
February 17, 2006
  - Factor out multiple identical definitions of some typedefs into
    xamineDataTypes.h
February 20, 2006
  -  Add longer descriptive titles to the Xamine names (parameter, gates etc).
  -  Fix some quoting errors in gui with respect to spectrum names with spaces.
February 21, 2006
  - Protect evals from parameters that have spaces in them by quoting
    with [list].
  - Add ability to list gates with spectra in SpectrumPackage.cpp's 
    DescribeSpectrum and immediate callers.
  - Add -showgate switch to -list operation on spectrum command.